--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/post/page.jsx", "app/page.jsx", "app/components/PostItem.jsx", "app/components/PostItem.jsx", "app/components/Form.jsx"],
   "exclude": ["node_modules"]
 }
